Project

General

Profile

Actions

Bug #22742

closed

rgw: resharding doesn't seem to preserve bucket acls

Added by Orit Wasserman over 6 years ago. Updated about 6 years ago.

Status:
Resolved
Priority:
High
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
jewel luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Created a public bucket; after resharding the acls do not seem to have been retained

$ s3 -us  create publicbucket cannedAcl=public-read-write
Request-Id: tx0000000000000000f48ff-005a5dd7d9-3732-default
Bucket successfully created.
$for i in {1..10}; do curl -X PUT http://localhost:8000/publicbucket/obj$i -d "@null" -s; done
$ s3 -us list publicbucket
Content-Type: application/xml
Request-Id: tx0000000000000000f490a-005a5dd810-3732-default
Content-Length: 2718
                       Key                             Last Modified      Size
--------------------------------------------------  --------------------  -----
obj1                                                2018-01-16T09:46:29Z      0
obj10                                               2018-01-16T09:46:29Z      0
obj2                                                2018-01-16T09:46:29Z      0
obj3                                                2018-01-16T09:46:29Z      0
obj4                                                2018-01-16T09:46:29Z      0
obj5                                                2018-01-16T09:46:29Z      0
obj6                                                2018-01-16T09:46:29Z      0
obj7                                                2018-01-16T09:46:29Z      0
obj8                                                2018-01-16T09:46:29Z      0
obj9                                                2018-01-16T09:46:29Z      0

$ s3 -us getacl publicbucket filename=publicbucket.acl
Content-Type: application/xml
Request-Id: tx0000000000000000f490c-005a5dd89d-3732-default
Content-Length: 820
$ cat publicbucket.acl
OwnerID testid M. Tester
 Type                                      User Identifier                                           Permission
------  ------------------------------------------------------------------------------------------  ------------
Group   All Users                                                                                   READ
Group   All Users                                                                                   WRITE
UserID  testid (M. Tester)                                                                          FULL_CONTROL

$ radosgw-admin bucket reshard --bucket=publicbucket --num-shards=10
2018-01-16 11:50:44.480673 7f70a509c9c0 -1 WARNING: the following dangerous and experimental features are enabled: *
2018-01-16 11:50:44.481002 7f70a509c9c0 -1 WARNING: the following dangerous and experimental features are enabled: *
2018-01-16 11:50:44.482355 7f70a509c9c0 -1 WARNING: the following dangerous and experimental features are enabled: *
*** NOTICE: operation will not remove old bucket index objects ***
***         these will need to be removed manually             ***
old bucket instance id: 7bacfc31-0169-4b18-8c29-1e4c5b1e481b.14130.3
new bucket instance id: 7bacfc31-0169-4b18-8c29-1e4c5b1e481b.14161.1
total entries: 10
2018-01-16 11:50:44.892935 7f70a509c9c0  0 lockdep stop

$ s3 -us getacl publicbucket filename=publicbucket2.acl
Content-Type: application/xml
Request-Id: tx0000000000000000f490d-005a5dd90c-3732-default
Content-Length: 435
$ cat publicbucket2.acl
OwnerID testid M. Tester
 Type                                      User Identifier                                           Permission
------  ------------------------------------------------------------------------------------------  ------------
UserID  testid (M. Tester)                                                                          FULL_CONTROL

$ curl http://localhost:8000/publicbucket
<?xml version="1.0" encoding="UTF-8"?><Error><Code>AccessDenied</Code><BucketName>publicbucket</BucketName><RequestId>tx0000000000000000f490e-005a5dd949-3732-default</RequestId><HostId>3732-default-default</HostId></Error>

Related issues 2 (0 open2 closed)

Copied to rgw - Backport #22703: jewel: rgw: offline resharding doesn't seem to preserve bucket aclsResolvedOrit WassermanActions
Copied to rgw - Backport #22922: luminous: rgw: resharding doesn't seem to preserve bucket aclsResolvedAbhishek LekshmananActions
Actions #1

Updated by Orit Wasserman over 6 years ago

  • Copied from Backport #22703: jewel: rgw: offline resharding doesn't seem to preserve bucket acls added
Actions #3

Updated by Orit Wasserman over 6 years ago

  • Status changed from In Progress to Fix Under Review
Actions #4

Updated by Orit Wasserman over 6 years ago

  • Priority changed from Normal to High
Actions #5

Updated by Nathan Cutler over 6 years ago

  • Subject changed from rgw: resharding doesn't seem to preserve bucket acls to jewel: rgw: resharding doesn't seem to preserve bucket acls
Actions #6

Updated by Nathan Cutler over 6 years ago

  • Description updated (diff)
Actions #7

Updated by Nathan Cutler over 6 years ago

  • Status changed from Fix Under Review to New
Actions #8

Updated by Nathan Cutler over 6 years ago

  • Tracker changed from Bug to Backport
  • Description updated (diff)
  • Status changed from New to In Progress
  • Release deleted (luminous)
  • Release set to jewel
Actions #9

Updated by Orit Wasserman over 6 years ago

  • Tracker changed from Backport to Bug
  • Subject changed from jewel: rgw: resharding doesn't seem to preserve bucket acls to rgw: resharding doesn't seem to preserve bucket acls
  • % Done set to 0
  • Regression set to No
  • Severity set to 3 - minor
  • Release deleted (jewel)
  • Release set to luminous
Actions #10

Updated by Nathan Cutler over 6 years ago

  • Description updated (diff)
Actions #11

Updated by Nathan Cutler over 6 years ago

  • Copied from deleted (Backport #22703: jewel: rgw: offline resharding doesn't seem to preserve bucket acls)
Actions #12

Updated by Nathan Cutler over 6 years ago

  • Copied to Backport #22703: jewel: rgw: offline resharding doesn't seem to preserve bucket acls added
Actions #13

Updated by Nathan Cutler over 6 years ago

  • Status changed from In Progress to Fix Under Review
Actions #14

Updated by Nathan Cutler over 6 years ago

  • Backport set to jewel luminous
Actions #15

Updated by Nathan Cutler over 6 years ago

  • Description updated (diff)
Actions #16

Updated by Orit Wasserman about 6 years ago

  • Backport changed from jewel luminous to luminous
Actions #17

Updated by Orit Wasserman about 6 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #18

Updated by Orit Wasserman about 6 years ago

  • Related to Backport #22922: luminous: rgw: resharding doesn't seem to preserve bucket acls added
Actions #19

Updated by Nathan Cutler about 6 years ago

  • Related to deleted (Backport #22922: luminous: rgw: resharding doesn't seem to preserve bucket acls)
Actions #20

Updated by Nathan Cutler about 6 years ago

  • Copied to Backport #22922: luminous: rgw: resharding doesn't seem to preserve bucket acls added
Actions #21

Updated by Nathan Cutler about 6 years ago

  • Backport changed from luminous to jewel luminous
Actions #22

Updated by Yuri Weinstein about 6 years ago

Orit Wasserman wrote:

https://github.com/ceph/ceph/pull/20038

merged

Actions #23

Updated by Nathan Cutler about 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF